# clip-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
src/clip/: main.py
src/clip/functions/: __init__.py  retrievers.py  similarity.py
src/clip/model/: clip.py
src/clip/preprocess/: __init__.py  preprocess.py
